nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-dep-service
spec:
  selector:
    app: my-dep
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
