ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-dep-ingress
  annotations:
    networking.gke.io/managed-certificates: "my-ssl-cert"
spec:
  ingressClassName: gce
  rules:
  - host: k8s.deployment.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-dep-service
            port:
              number: 80
  - host: www.k8s.deployment.sh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-dep-service
            port:
              number: 80
